# regexplain

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  colorize.rs  convert.rs  desc.rs  inputarea.rs  main.rs  matcher.rs  state.rs  textarea.rs  tree.rs  tui.rs  types.rs
src/tui/: app.rs  desctree.rs  inputarea.rs  match_editor.rs  mod.rs  textarea_ext.rs
