[package]
name = "regexplain"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["osc52"] }
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
regex = "1.12.3"
regex-syntax = "0.8.10"
textwrap = "0.16"
tui-textarea-2 = "0.11.0"
